fixing layout issue for login rate button

--- a/src/amo/components/RatingManager/styles.scss
+++ b/src/amo/components/RatingManager/styles.scss
@@ -9,7 +9,7 @@
 
 .RatingManager-log-in-to-rate-button {
   font-size: $font-size-s;
-  padding: 0;
+  padding: 2px 16px;
   position: absolute;
   width: 100%;
 }
